# avVideo

./: .gitignore  CMakeLists.txt  Findavcodec.cmake  Findavdevice.cmake  Findavformat.cmake  Findavutil.cmake  Findswscale.cmake  README.md  dependencies.txt
src/: CMakeLists.txt  avConsole.h  avDecoder.cpp  avDecoder.h  avEncoder.cpp  avEncoder.h  avVideo.h  main.cpp  video.cpp  video.h
